# 3d-renderer

./: CMakeLists.txt  Object.cpp  Object.hpp  README.md  RenderArea.cpp  RenderArea.hpp  Screen.cpp  Screen.hpp  Vector.cpp  Vector.hpp  Vector3.cpp  Vector3.hpp  \  a.out  build.sh  main  main.cpp
.cache/clangd/index/: Object.cpp.2C83BABCBD055E7B.idx  Object.hpp.F946F1F44727A8CC.idx  Screen.cpp.1A66F047F325BF94.idx  Screen.hpp.2E49FB54C1273426.idx  Vector3.cpp.99CDD7031F8A923E.idx  Vector3.hpp.1739A5876F00DFB5.idx  main.cpp.90D66C71BF54A975.idx
matrix/: Mat4.cpp  Mat4.hpp
